@feat: add bundle

--- a/index.html
+++ b/index.html
@@ -106,6 +106,6 @@
     </div>
 </div>
 
-<script type="module" src="js/main.js"></script>
+<script defer src="dist/app.bundle.js"></script>
 </body>
 </html>
